--- a/src/app/academy-manager/academy-view/academy-view.component.html
+++ b/src/app/academy-manager/academy-view/academy-view.component.html
@@ -149,7 +149,7 @@
 
     <!-- Modal Add Module -->
     <ng-template #templateAddModule>
-        <div class="modal-body text-center">
+        <div class="modal-body container text-center">
             <form #addModuleForm="ngForm" (ngSubmit)="addModuleToAcademy()">
                 <div class="row">
                     <label style="font-weight: bolder;" for="name">Nome:</label>
